--- a/Main/SilverlightClient/SilverlightClient.2010.csproj
+++ b/Main/SilverlightClient/SilverlightClient.2010.csproj
@@ -233,8 +233,8 @@
       <Project>{12C65F68-BDF8-4C3C-A7C0-4366A72D887F}</Project>
       <Name>SilverlightDynamicGeometry.2010</Name>
     </ProjectReference>
-    <ProjectReference Include="..\GeometryTutorLibrary\GeometryTutorLib\GeometryTutorLib.csproj">
-      <Project>{2baa33e9-4cf7-4962-a32c-3988dc64f63a}</Project>
+    <ProjectReference Include="..\GeometryTutorLib\GeometryTutorLib.csproj">
+      <Project>{2ed63907-af71-49b4-bdc5-470b70e17061}</Project>
       <Name>GeometryTutorLib</Name>
     </ProjectReference>
   </ItemGroup>
