Added perpendicular intersection from parallel transversal.  Fixed math with identifying alternate interior and same-side interior angles.

--- a/Main/GeometryTutorLib/GeometryTutorLib.csproj
+++ b/Main/GeometryTutorLib/GeometryTutorLib.csproj
@@ -99,6 +99,7 @@
     <Compile Include="GenericInstantiator\Axioms\SAS.cs" />
     <Compile Include="GenericInstantiator\Axioms\SegmentAdditionAxiom.cs" />
     <Compile Include="GenericInstantiator\Axioms\SSS.cs" />
+    <Compile Include="GenericInstantiator\Definitions\PerpendicularSegments.cs" />
     <Compile Include="GenericInstantiator\Definitions\Definition.cs" />
     <Compile Include="GenericInstantiator\Definitions\IsoscelesTriangleDefinition.cs" />
     <Compile Include="GenericInstantiator\Definitions\MidpointDefinition.cs" />
