Adds a new AIDebugWindow to the UI, as well as the UIDebugPublisher to the GeometryTutorLib. The UIDebugPublisher allows the back end to publish strings to the new window. The actual update operations will be executed asynchronously on the UI thread.

--- a/Main/DynamicGeometryLibrary/SilverlightDynamicGeometry.2010.csproj
+++ b/Main/DynamicGeometryLibrary/SilverlightDynamicGeometry.2010.csproj
@@ -289,6 +289,7 @@
     <Compile Include="Serialization\IniFile.cs" />
     <Compile Include="Serialization\Serializer.cs" />
     <Compile Include="Settings.cs" />
+    <Compile Include="SmartDispatcher.cs" />
     <Compile Include="Styles\FigureStyle.cs" />
     <Compile Include="Styles\BackgroundStyle.cs" />
     <Compile Include="Styles\IFigureStyle.cs" />
@@ -299,6 +300,7 @@
     <Compile Include="Styles\StyleManager.cs" />
     <Compile Include="Styles\StylePicker.cs" />
     <Compile Include="Styles\TextStyle.cs" />
+    <Compile Include="UI\AIDebugWindow.cs" />
     <Compile Include="UI\BehaviorOrderer.cs" />
     <Compile Include="UI\CommandSystem\Command.cs" />
     <Compile Include="UI\CommandSystem\CompositeCommandObserver.cs" />
