User can now configure the axioms, definitions, and theorems that the back end is permitted to use. Grouping features will be added in a future commit.

--- a/Main/DynamicGeometryLibrary/SilverlightDynamicGeometry.2010.csproj
+++ b/Main/DynamicGeometryLibrary/SilverlightDynamicGeometry.2010.csproj
@@ -313,6 +313,7 @@
     <Compile Include="UI\DrawingHost.cs" />
     <Compile Include="UI\FigureExplorer.cs" />
     <Compile Include="UI\IconBuilder.cs" />
+    <Compile Include="UI\ParseOptionsWindow.cs" />
     <Compile Include="UI\Ribbon\BehaviorToolButton.cs" />
     <Compile Include="UI\Ribbon\ButtonGrid.cs" />
     <Compile Include="UI\Ribbon\CommandToolButton.cs" />
