Added a mechanism for displaying blocking dialogs between each front-end parse action. These dialogs block the parse thread but not the UI thread and are used for disambiguation dialogs.
Disambiguation dialogs added for right and isosceles triangles as well as midpoints.

--- a/Main/SilverlightClient/SilverlightClient.2010.csproj
+++ b/Main/SilverlightClient/SilverlightClient.2010.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Extensions\Operations\TearOff.cs" />
     <Compile Include="IsolatedStorage.cs" />
     <Compile Include="Page.cs" />
+    <Compile Include="ParseController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service References\LiveGeometryWebServices\Reference.cs">
       <AutoGen>True</AutoGen>
