--- a/Main/DynamicGeometryLibrary/SilverlightDynamicGeometry.2010.csproj
+++ b/Main/DynamicGeometryLibrary/SilverlightDynamicGeometry.2010.csproj
@@ -314,6 +314,7 @@
     <Compile Include="UI\DrawingHost.cs" />
     <Compile Include="UI\FigureExplorer.cs" />
     <Compile Include="UI\IconBuilder.cs" />
+    <Compile Include="UI\ParseDisambiguationWindow.cs" />
     <Compile Include="UI\ParseGroup.cs" />
     <Compile Include="UI\ParseGroupWindow.cs" />
     <Compile Include="UI\ParseOptionsWindow.cs" />
