--- a/Main/GeometryTutorLib/GeometryTutorLib.csproj
+++ b/Main/GeometryTutorLib/GeometryTutorLib.csproj
@@ -197,7 +197,9 @@
     <Compile Include="ProblemAnalyzer\Problem.cs" />
     <Compile Include="Pebbler\SharedPebbledNodeList.cs" />
     <Compile Include="ProblemAnalyzer\DiGraph.cs" />
+    <Compile Include="ProblemCharacteristics.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Relationship.cs" />
     <Compile Include="UIDebugPublisher.cs" />
     <Compile Include="Utilities.cs" />
   </ItemGroup>
